--- a/index.css
+++ b/index.css
@@ -12,6 +12,11 @@ body, .jumbotron{
 	background-color: rgb(220,220,220);
 }
 
+.link{
+	text-decoration: none;
+	color: white;
+}
+
 #overlay{
 	position: fixed; 
     width: 100%; 
@@ -48,7 +53,7 @@ body, .jumbotron{
 	right: 0;
 	left: 0;
 	margin: 0 auto;
-	top: 4.8em;
+	top: 5.5em;
 	background-color: rgba(180, 180, 180, 0.25);
 	box-shadow: 0px 2px 2px #910818;
 	border-radius: 5px;
@@ -80,7 +85,7 @@ body, .jumbotron{
 
 .slide-menu{
 	width: 240px;
-	height: 340px;
+	height: 300px;
 	display: none;
 	position: fixed;
 	right: -60px;
@@ -118,9 +123,9 @@ body, .jumbotron{
 	position: relative;
 	background-color: rgba(170, 57, 57, 0.5);
 	border-radius: 5px;
-	margin-top: 1em;
 	overflow: auto;
 	height: 480px;
+	margin-top: .5em;
 }
 #about-title{
 	position: relative;
@@ -135,7 +140,6 @@ body, .jumbotron{
 }
 #about-title h1{
 	font-size: 5em;
-	font-family: cursive;
 	z-index: 1;
 	color: black;
 	margin: 0;
@@ -145,6 +149,8 @@ body, .jumbotron{
 	z-index: 10;
 	padding: 1em 0 1em 1.5em;
 	float: left;
+	font-family: 'Merriweather', serif;
+	text-transform: none;
 }
 #about-img{
 	height: auto;
@@ -161,7 +167,7 @@ body, .jumbotron{
 	position: relative;
 	background-color: rgba(34, 102, 102, 0.5);
 	border-radius: 5px;
-	margin-top: 1em;
+	margin-top: .5em;
 	height: 480px;
 }
 #testim-title{
@@ -177,7 +183,6 @@ body, .jumbotron{
 }
 #testim-title h1{
 	font-size: 5em;
-	font-family: cursive;
 	z-index: 1;
 	color: black;
 	margin: 0;
@@ -194,6 +199,8 @@ body, .jumbotron{
 	padding: 1em 1.5em 1em 1.5em;
 	position: absolute;
 	left: 350px;
+	font-family: 'Merriweather', serif;
+	text-transform: none;
 }
 
 
@@ -203,7 +210,7 @@ body, .jumbotron{
 	position: relative;
 	background-color: rgba(122, 159, 53, 0.5);
 	border-radius: 5px;
-	margin-top: 1em;
+	margin-top: .5em;
 	overflow: auto;
 	height: 480px;
 }
@@ -220,7 +227,6 @@ body, .jumbotron{
 }
 #blog-title h1{
 	font-size: 5em;
-	font-family: cursive;
 	z-index: 1;
 	color: black;
 	margin: 0;
@@ -230,6 +236,8 @@ body, .jumbotron{
 	z-index: 10;
 	padding: 1em 0 1em 1.5em;
 	float: left;
+	font-family: 'Merriweather', serif;
+	text-transform: none;
 }
 #blog-img{
 	height: auto;
@@ -240,9 +248,25 @@ body, .jumbotron{
 }
 
 
+/* ---------- Footer ---------- */
 
-
-
+#contact{
+	padding: 15px;
+}
+#contact p, #contact a{
+	font-family: 'Merriweather', serif;
+	text-transform: none;
+}
+#contact a{
+	text-decoration: none;
+	color: #32B9ED;
+}
+#copyright{
+	padding: 10px;
+	font-family: sans-serif;
+	text-transform: none;
+	opacity: 0.5;
+}
 
 
 
