--- a/index.css
+++ b/index.css
@@ -1,20 +1,65 @@
-/* ----------  ---------- */
+/* ---------- Shared ---------- */
+
+body, .jumbotron, .close-menu, #contact h2{
+	font-family: 'Julius Sans One', 'Open Sans', sans-serif;
+	text-transform: uppercase;
+}
+body, .jumbotron, .link{
+	text-decoration: none;
+}
+#menu, .nav:hover, .slide-menu, .close-menu, .slide-nav:hover{
+	box-shadow: 0px 2px 2px #910818;
+}
+.jumbotron, #about-block, #about-title, #testim-block, #testim-title, #blog-block, #blog-title{
+	position: relative;
+}
+.nav, .slide-nav{
+	padding: 10px;
+}
+a{
+	text-decoration: none;
+}
+#contact, #about-text, #testim-text, #blog-text, #copyright{
+	font-family: 'Merriweather', serif;
+}
+#about-title, #testim-title, #blog-title{
+	top: 0.5em;
+	width: 90%;
+	border: none;
+	border-radius: 5px;
+	z-index: 1;
+	margin: 0 0 0 1em;
+	padding-left: 1em;
+}
+#about-title h1, #testim-title h1, #blog-title h1{
+	font-size: 5em;
+	z-index: 1;
+	color: white;
+	margin: 0;
+}
+#about-block, #testim-block, #blog-block{
+	border-radius: 5px;
+	height: 480px;
+	margin-top: .5em;
+}
+#about-text, #testim-text, #blog-text{
+	width: 680px;
+	text-align: justify;
+	text-transform: none;
+}
+#quote, #contact p, #contact a, #copyright, #about-text, #testim-text, #blog-text{
+	text-transform: none;
+}
+
 
 /* ---------- Body ---------- */
 
 body{
 	overflow-x: hidden;
 }
-body, .jumbotron{
-	text-transform: uppercase;
-	text-decoration: none;
-	font-family: 'Julius Sans One', 'Open Sans', sans-serif;
-	background-color: rgb(220,220,220);
-}
 
 .link{
-	text-decoration: none;
-	color: white;
+	color: #32B9ED;
 }
 
 #overlay{
@@ -23,11 +68,14 @@ body, .jumbotron{
     height: 100%; 
     top: 0px; 
     left: 0px; 
-    background-color: #000; 
-    opacity: 0.6;
-    filter: alpha(opacity = 60) !important;
+    opacity: 0.9;
+    filter: alpha(opacity = 90) !important;
     display: none;
     z-index: 10;
+    background: -webkit-linear-gradient(left top, #EB0080 , #0579D9); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(bottom right, #EB0080 , #0579D9); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(bottom right, #EB0080 , #0579D9); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(to bottom right, #EB0080 , #0579D9); /* Standard syntax */
 }
 
 /* ---------- Jumbotron ---------- */
@@ -55,18 +103,11 @@ body, .jumbotron{
 	margin: 0 auto;
 	top: 5.5em;
 	background-color: rgba(180, 180, 180, 0.25);
-	box-shadow: 0px 2px 2px #910818;
 	border-radius: 5px;
 	z-index: 2;
 }
 #name a{
 	font-size: 1.75em;
-}
-.nav{
-	padding: 10px;
-}
-.nav:hover{
-	box-shadow: 0px 2px 2px #910818;
 }
 
 
@@ -90,67 +131,32 @@ body, .jumbotron{
 	position: fixed;
 	right: -60px;
 	background-color: rgba(200, 200, 200, 0.75);
-	box-shadow: 0px 2px 2px #910818;
 	z-index: 9999;
 }
 .slide-menu ul{
 	list-style: none;
 }
 .close-menu{
-	font-family: 'Julius Sans One', 'Open Sans', sans-serif;
 	padding: 5px;
-	box-shadow: 0px 2px 2px #910818;
 	cursor: pointer;
 	font-size: 1em;
 }
-.slide-nav{
-	padding: 10px;
-}
-.slide-nav:hover{
-	box-shadow: 0px 2px 2px #910818;
-}
 .slide-menu a{
-	text-decoration: none;
 	color: black;
 }
-.slid-out{
-}
+.slid-out{}
 
 
 /* ---------- About ---------- */
 
-#about-block{
-	position: relative;
-	background-color: rgba(170, 57, 57, 0.5);
-	border-radius: 5px;
-	overflow: auto;
-	height: 480px;
-	margin-top: .5em;
-}
 #about-title{
-	position: relative;
-	top: 0.5em;
-	width: 90%;
-	border: none;
-	border-radius: 5px;
-	z-index: 1;
-	margin: 0 0 0 1em;
-	padding-left: 1em;
-	background-color: #D46A6A;
-}
-#about-title h1{
-	font-size: 5em;
-	z-index: 1;
-	color: black;
-	margin: 0;
+	background-color: #7663A3;
 }
 #about-text{
 	width: 680px;
 	z-index: 10;
 	padding: 1em 0 1em 1.5em;
 	float: left;
-	font-family: 'Merriweather', serif;
-	text-transform: none;
 }
 #about-img{
 	height: auto;
@@ -163,29 +169,8 @@ body, .jumbotron{
 
 /* ---------- Testimonials ---------- */
 
-#testim-block{
-	position: relative;
-	background-color: rgba(34, 102, 102, 0.5);
-	border-radius: 5px;
-	margin-top: .5em;
-	height: 480px;
-}
 #testim-title{
-	position: relative;
-	top: 0.5em;
-	width: 90%;
-	border: none;
-	border-radius: 5px;
-	z-index: 1;
-	margin: 0 0 0 1em;
-	padding-left: 1em;
-	background-color: #407F7F;
-}
-#testim-title h1{
-	font-size: 5em;
-	z-index: 1;
-	color: black;
-	margin: 0;
+	background-color: #54958C;
 }
 #testim-img{
 	height: auto;
@@ -199,45 +184,19 @@ body, .jumbotron{
 	padding: 1em 1.5em 1em 1.5em;
 	position: absolute;
 	left: 350px;
-	font-family: 'Merriweather', serif;
-	text-transform: none;
 }
 
 
 /* ---------- Blog ---------- */
 
-#blog-block{
-	position: relative;
-	background-color: rgba(122, 159, 53, 0.5);
-	border-radius: 5px;
-	margin-top: .5em;
-	overflow: auto;
-	height: 480px;
-}
 #blog-title{
-	position: relative;
-	top: 0.5em;
-	width: 90%;
-	border: none;
-	border-radius: 5px;
-	z-index: 1;
-	margin: 0 0 0 1em;
-	padding-left: 1em;
-	background-color: #A5C663;
-}
-#blog-title h1{
-	font-size: 5em;
-	z-index: 1;
-	color: black;
-	margin: 0;
+	background-color: #61749F;
 }
 #blog-text{
 	width: 680px;
 	z-index: 10;
 	padding: 1em 0 1em 1.5em;
 	float: left;
-	font-family: 'Merriweather', serif;
-	text-transform: none;
 }
 #blog-img{
 	height: auto;
@@ -250,31 +209,142 @@ body, .jumbotron{
 
 /* ---------- Footer ---------- */
 
+footer{
+	clear: both;
+}
+#quote{
+	text-align: center;
+	font-family: 'Marck Script', cursive;
+}
+#ryt{
+	height: auto;
+	width: 150px;
+	display: block;
+	margin: 40px auto;
+}
 #contact{
 	padding: 15px;
 }
-#contact p, #contact a{
-	font-family: 'Merriweather', serif;
-	text-transform: none;
-}
 #contact a{
-	text-decoration: none;
 	color: #32B9ED;
 }
 #copyright{
 	padding: 10px;
-	font-family: sans-serif;
-	text-transform: none;
-	opacity: 0.5;
+	opacity: 0.4;
 }
 
 
+/* ----------------------------------
+		Media Queries
+---------------------------------- */
 
+@media only screen and (max-width: 480px){
 
+	.jumbotron{
+		background-position: center;
+		overflow: hidden;
+	}
+	#about-block, #blog-block, #testim-block{
+		height: auto;
+	}
+	#about-title, #testim-title, #blog-title{
+		margin: 0;
+		padding: 0;
+		text-align: center;
+		width: 100%;
+		height: 5.5em;
+		position: static;
+		z-index: 0;
+	}
+	#about-img, #testim-img, #blog-img{
+		margin: 1em 0;
+		width: 100%;
+		z-index: 0;
+	}
+	#about-text, #testim-text, #blog-text{
+		width: 100%;
+		padding: 0;
+		right: 0;
+		left: 0;
+		position: static;
+		z-index: 0;
+	}
+	#contact{
+		text-align: center;
+	}
 
+}
 
+@media only screen and (min-width: 481px) and (max-width: 767px){
 
+	.jumbotron{
+		background-position: center;
+		overflow: hidden;
+	}
+	#about-block, #testim-block, #blog-block{
+		height: auto;
+	}
+	#about-title, #testim-title, #blog-title{
+		margin: 0;
+		padding: 0;
+		text-align: center;
+		width: 100%;
+		height: 5.5em;
+		position: static;
+		z-index: 0;
+	}
+	#about-img, #testim-img, #blog-img{
+		margin: 1em;
+		width: 95%;
+		z-index: 0;
+	}
+	#about-text, #testim-text, #blog-text{
+		width: 100%;
+		padding: 0;
+		right: 0;
+		left: 0;
+		position: static;
+		z-index: 0;
+	}
+	#contact{
+		text-align: center;
+	}
 
+}
 
+@media only screen and (min-width: 768px) and (max-width: 1024px){
 
+	.jumbotron{
+		background-position: center;
+		overflow: hidden;
+	}
+	#about-block, #blog-block, #testim-block{
+		height: auto;
+	}
+	#about-title, #testim-title, #blog-title{
+		margin: 0;
+		padding: 0;
+		text-align: center;
+		width: 100%;
+		height: 5.5em;
+		position: static;
+		z-index: 0;
+	}
+	#about-img, #testim-img, #blog-img{
+		margin: 1em 0;
+		width: 100%;
+		z-index: 0;
+	}
+	#about-text, #testim-text, #blog-text{
+		width: 100%;
+		padding: 0;
+		right: 0;
+		left: 0;
+		position: static;
+		z-index: 0;
+	}
+	#contact{
+		text-align: center;
+	}
 
+}
