--- a/praise.css
+++ b/praise.css
@@ -21,20 +21,21 @@
 #content, #nav-button{
 	float: right;
 }
-a, .expand{
+a{
 	text-decoration: none;
 }
 #copyright, #contact{
 	padding: 15px;
 }
-#main h2, #content, #contact a, #contact p, #copyright, #motto{
+#main h2, #content, .praise, #contact a, #contact p, #copyright{
 	font-family: 'Merriweather', 'Open Sans', sans-serif;
 	line-height: 150%;
 }
-#icon, #ryt, #expand{
+#icon, #ryt{
 	height: auto;
 }
 #overlay{
+	position: fixed; 
     width: 100%; 
     height: 100%; 
     top: 0px; 
@@ -64,7 +65,6 @@ header{
 header:hover{
 	padding-left: 15px;
 }
-
 #name{
 	font-size: 2.4em;
 	width: 300px;
@@ -74,7 +74,6 @@ header:hover{
 #name a{
 	color: black;
 }
-
 #nav-button{
 	margin: 38px 25px;
 }
@@ -109,47 +108,35 @@ header:hover{
 .slid-out{}
 
 
+/* ---------- Title ---------- */
+
+#title{
+	font-size: 2em;
+	height: 140px;
+	background-color: #54958C;
+	padding: 20px;
+}
+#title h1{
+	color: white;
+}
+
+
 /* ---------- Content ---------- */
 
 #main{
 	padding-top: 160px;
 }
-
-
-/* ---------- Title ---------- */
-
-#title{
-	font-size: 2em;
-	height: auto;
-	background-color: #C56F99;
-	padding: 10px;
-}
-#title h1{
-	color: white;
-}
 #content{
 	width: 80%;
-	margin-top: 40px;
-	margin-bottom: 100px;
+	margin: 40px 40px 100px 0;
 	padding-right: 20px;
+	text-align: justify;
 }
-#expand{
-	width: 15px;
+.praise{
+	font-size: 1.2em;
 }
-.expand{
-	color: #32B9ED;
-}
-.address{
-	display: none;
-	margin-left: 20px;
-	color: gray;
-}
-.rotated {
-  transform: rotate(180deg);
-  -ms-transform: rotate(180deg); /* IE 9 */
-  -moz-transform: rotate(180deg); /* Firefox */
-  -webkit-transform: rotate(180deg); /* Safari and Chrome */
-  -o-transform: rotate(180deg); /* Opera */
+.in-quote{
+	font-style: italic;
 }
 
 
@@ -157,11 +144,6 @@ header:hover{
 
 footer{
 	clear: both;
-}
-#motto{
-	text-align: center;
-	font-size: 2.4em;
-	font-style: italic;
 }
 #quote{
 	font-family: 'Marck Script', cursive;
@@ -197,8 +179,8 @@ footer{
 		display: inline;
 	}
 	#name{
-		height: auto;
 		width: 90%;
+		height: auto;
 		font-size: 1.2em;
 		margin: 0;
 		padding: 0;
@@ -234,6 +216,8 @@ footer{
 	#content{
 		width: 90%;
 		padding-right: 0;
+		margin: 0 auto;
+		float: none;
 	}
 	#title{
 		font-size: 1.2em;
@@ -243,15 +227,11 @@ footer{
 	#title h1{
 		height: 90%;
 	}
-	#content p{
+	#content h2{
+		font-size: 90%;
+	}
+	.praise{
 		font-size: .8em;
 	}
 
 }
-
-
-
-
-
-
-
